srcs/ftps.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftps
  labels:
    app: ftps
spec:
  ports:
  - port: 21
    protocol: TCP
    name: ftps
  - port: 21000
    protocol: TCP
    name: ftps-data
  selector:
    app: ftps
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftps
  labels:
    app: ftps
spec:
  selector:
    matchLabels:
      app: ftps
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ftps
    spec:
      restartPolicy: Always
      containers:
      - name: phippy-ftps
        image: phippy-ftps
        imagePullPolicy: Never
        ports:
        - containerPort: 21
          name: port-21
          hostPort: 21
        - containerPort: 21000
          name: port-21000
          hostPort: 21000
        volumeMounts:
        - name: ftps-persistent-storage
          mountPath: /ftps
        - name: wordpress-persistent-storage
          mountPath: /wordpress
      volumes:
        - name: ftps-persistent-storage
          persistentVolumeClaim:
            claimName: ftps-pv-claim
        - name: wordpress-persistent-storage
          persistentVolumeClaim:
            claimName: wp-pv-claim
