srcs/phpmyadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  type: NodePort
  ports:
    - port: 5000
      protocol: TCP
      nodePort: 5000
  selector:
    app: phpmyadmin

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  selector:
    matchLabels:
      app: phpmyadmin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      restartPolicy: Always
      containers:
      - image: phippy-phpmyadmin
        name: phpmyadmin
        imagePullPolicy: Never
