srcs/wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
      nodePort: 5050
  selector:
    app: wordpress
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      restartPolicy: Always
      containers:
      - image: phippy-wordpress
        name: wordpress
        imagePullPolicy: Never
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
