srcs/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: phippy-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  template:
    spec:
      containers:
      - name: nginx-ingress-controller
        ports:
         - containerPort: 20
           hostPort: 20
         - containerPort: 21
           hostPort: 21
         - containerPort: 3306
           hostPort: 3306
         - containerPort: 22000
           hostPort: 22000
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
